--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -4,26 +4,29 @@
     <section class="col-3">
 
       <h5 class="text-warning ml-3">Sort</h5>
-      <select name="" id="" class="custom-select mb-3">
-        <option>Alphabetical</option>
-        <option>Price: Low To High</option>
-        <option>Price: High To Low</option>
+      <select name="" id="" class="custom-select mb-3" (change)="onSortSelection($event.target.value)">
+        <option *ngFor="let sort of sortOptions" [value]="sort.value">
+          {{sort.name}}
+        </option>
+
       </select>
 
       <h5 class="text-warning ml-3">Brands</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let brand of brands" aria-current="true">
+        <li class="list-group-item" *ngFor="let brand of brands" aria-current="true"
+          [class.active]="brand.id === this.shopParams.brandId" [value]="brand.id" (click)="onBrandSelected(brand.id)">
           {{brand.name}}
         </li>
-       
+
       </ul>
 
       <h5 class="text-warning ml-3">Types</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let type of types" aria-current="true">
+        <li class="list-group-item" *ngFor="let type of types" aria-current="true"
+          [class.active]="type.id === this.shopParams.typeId" [value]="type.id" (click)="onTypeSelected(type.id)">
           {{type.name}}
         </li>
-       
+
       </ul>
 
     </section>
@@ -31,22 +34,34 @@
     <section class="col-9">
 
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <header>
-          <span>Showing <strong>10</strong> of <strong>15</strong> Results</span>
-        </header>
+        
+        <app-paging-header
+          [totalCount]="totalCount"
+          [pageSize]="this.shopParams.pageSize"
+          [pageNumber]="this.shopParams.pageNumber"></app-paging-header>
+
         <div class="form-inline mt-2">
           <input type="text" class="form-control mr-2" style="width: 300px;" placeholder="Search">
           <button class="btn btn-outline-primary my-2 ">Search</button>
           <button class="btn btn-outline-success my-2 my-2">Reset</button>
         </div>
       </div>
-     
+
 
       <div class="row">
         <div class="col-md-4 col-sm-2 col-xs-1 mb-3" *ngFor="let item of products">
           <app-product-item [product]="item"></app-product-item>
         </div>
       </div>
+
+      <!-- //pagination tabs -->
+      <div class="d-flex justify-content-center" *ngIf="totalCount > 0 ">
+        <app-pager
+          [pageSize]="shopParams.pageSize"
+          [totalCount]="totalCount"
+          (pageChanged)="onPageChanged($event)">
+        </app-pager>
+      </div>  
 
     </section>
   </div>
