--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -41,9 +41,9 @@
           [pageNumber]="this.shopParams.pageNumber"></app-paging-header>
 
         <div class="form-inline mt-2">
-          <input type="text" class="form-control mr-2" style="width: 300px;" placeholder="Search">
-          <button class="btn btn-outline-primary my-2 ">Search</button>
-          <button class="btn btn-outline-success my-2 my-2">Reset</button>
+          <input type="text" class="form-control mr-2" #search  style="width: 300px;" placeholder="Search" (keyup)="onSearch()">
+          <button class="btn btn-outline-primary my-2 " (click)="onSearch()">Search</button>
+          <button class="btn btn-outline-success my-2 my-2" (click)="onReset()">Reset</button>
         </div>
       </div>
 
