--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,15 +2,16 @@
 
   <img src="{{product.pictureUrl}}" class="img-fluid bg-info" alt="{{product.name}}">
   <div class="card-body d-flex flex-column">
-    <a routerLink="/shop/{{product.id}}">
+    <a routerLink="shop/{{product.id}}">
       <h6 class="text-uppercase">{{product.name}}</h6>
     </a>
     <span class="mb-2">{{product.price | currency}}</span>
 
     <div class="btn-group mt-auto">
       <button type="button" class="btn btn-sm btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-      <button routerLink="/shop/{{product.id}}" routerLinkActive="router-link-active" type="button"
+      <button routerLink="shop/{{product.id}}" routerLinkActive="router-link-active" type="button"
         class="btn btn-sm btn-outline-secondary fa fa-eye"></button>
+      {{product.id}}
     </div>
     <small class="text-muted">9 mins</small>
   </div>
