--- a/client/src/app/core/server-error/server-error.component.html
+++ b/client/src/app/core/server-error/server-error.component.html
@@ -1,3 +1,14 @@
 <div class="container mt-5">
-    <h1>Server Error...</h1>
+    <h4>Internal Server Error - Refreshing will make the error disapper</h4>
+    <ng-container *ngIf="error">
+        <h5 class="text-danger"> Error : {{error.message}} </h5>
+        <p class="font-weight-bold">This error comes from server - not from Angular</p>
+        <p>What to do next?</p>
+        <ol>
+            <li>Check network tab in chrome dev tools </li>
+            <li>Reproduce the error in postman - if the same error occurs then definately not Angular</li>
+        </ol>
+        <h5>Stack Trace</h5>
+        <code class="mt-5" style="background-color: whitesmoke;">{{error.details}}</code>
+    </ng-container>
 </div>
