--- a/client/src/app/core/test-error/test-error.component.html
+++ b/client/src/app/core/test-error/test-error.component.html
@@ -1,8 +1,14 @@
 <div class="container mt-5">
     <button (click)="grt404Error()" class="btn btn-outline-primary mt-5">test 4004 error</button>
     <button (click)="grt500Error()" class="btn btn-outline-primary mt-5">test 500 error</button>
-    <button (click)="grt400Error()" class="btn btn-outline-primary mt-5">test 400 error</button>
+    <button (click)="grt400Error()" class="btn btn-outline-primary mt-5">test validation error</button>
     <button (click)="get400validationError()" class="btn btn-outline-primary mt-5">test 500 error</button>
     <button (click)="grt404Error()" class="btn btn-outline-primary mt-5">test validation error</button>
-    
+    <div class="row mt-5" *ngIf="validationErrors.length > 0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">
+                {{error}}
+            </li>
+        </ul>
+    </div>
 </div>
