commit caousel styleing completed

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<carousel [isAnimated]="true">
+
+    <slide>
+        <img src="assets/images/hero1.jpg" alt="slide" style="display: block; width: 100%;">
+        <img src="assets/images/hero2.jpg" alt="slide" style="display: block; width: 100%;">
+        <img src="assets/images/hero3.jpg" alt="slide" style="display: block; width: 100%;">
+    </slide>
+
+</carousel>
+
+<section class="featured">
+    <div class="d-felx justify-content-center pt-4">
+        <h1>welcome to the shoop..!</h1>
+    </div>
+</section>
