--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,6 +1,11 @@
 <div class="card h-100 shadow-sm">
 
-  <img src="{{product.pictureUrl}}" class="img-fluid bg-info" alt="{{product.name}}">
+  <div class="img position-relative" style="cursor: pointer;">
+    <img src="{{product.pictureUrl}}" class="img-fluid bg-info" alt="{{product.name}}">
+    
+  </div>
+
+  
   <div class="card-body d-flex flex-column">
     <a routerLink="shop/{{product.id}}">
       <h6 class="text-uppercase">{{product.name}}</h6>
